Update: Cleaned up CSS

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <title>Hangman</title>
 </head>
 
+<body>
+
 <!-- start screen -->
 <div id="start-screen" class="game-container">
+      <div class="start-content">
     <h1> Welcome to Hangman!</h1>
     <p> Objective: Figure out the hidden word in less than <u>7</u> tries</p>
     <p>Guess letters by clicking on the keyboard buttons</p>
+    
     <button id="play-btn">Play</button>
+    </div>
 </div>
 
 <!-- main page game  -->
@@ -30,7 +35,7 @@
 
     <div id="category-hint" class="hint-box"></div>
     <div id="game-message"></div>
-    <div id="displayed-word"></div>
+    <div id="guessing-word"></div>
 
     <div class="keyboard">
         <div class="keyboard-row">
