--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/app.js" defer></script>
-    <title>Hangman</title>
+    <title>Hangman Game</title>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
     <div id="start-screen" class="game-container">
         <div class="start-content">
             <h1> Welcome to Hangman!</h1>
-            <p> Objective: Figure out the hidden word in less than <u>7</u> tries</p>
-            <p>Guess letters by clicking on the keyboard buttons</p>
+            <p> Objective: Figure out the hidden word in less than <u>7</u> tries.</p>
+            <p>Guess letters by clicking on the keyboard buttons.</p>
 
             <button id="play-btn">Play</button>
         </div>
@@ -38,6 +38,7 @@
         <div id="game-message"></div>
         <div id="guessing-word"></div>
 
+        <!-- keyboard buttons -->
         <div class="keyboard">
             <div class="keyboard-row">
                 <button class="button">Q</button>
