--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="start-screen" class="game-container">
         <div class="start-content">
             <h1> Welcome to Hangman!</h1>
-            <p> Objective: Figure out the hidden word in less than <u>7</u> tries.</p>
-            <p>Guess letters by clicking on the keyboard buttons.</p>
+            <p> <strong>Objective:</strong> Figure out the hidden word in less than <u>7</u> tries.</p>
+            <p><strong>How To Play:</strong> Guess letters by clicking on the keyboard buttons.</p>
 
             <button id="play-btn">Play</button>
         </div>
@@ -32,11 +32,10 @@
             <video id="hangman-video" width="250" autoplay muted>
                 <source src="assets/0.mp4" type="video/mp4">
             </video>
+            <div id="category-hint"></div>
+            <div id="game-message"></div>
+            <div id="guessing-word"></div>
         </div>
-
-        <div id="category-hint" class="hint-box"></div>
-        <div id="game-message"></div>
-        <div id="guessing-word"></div>
 
         <!-- keyboard buttons -->
         <div class="keyboard">
@@ -73,7 +72,6 @@
                 <button class="button">M</button>
             </div>
         </div>
-
         <div class="action-buttons">
             <button id="next">Next</button>
             <button id="reset">Reset</button>
